fix(overlay-alert): missing gap in the header when there are no controls

--- a/src/components/OverlayAlert/OverlayAlert.style.scss
+++ b/src/components/OverlayAlert/OverlayAlert.style.scss
@@ -5,6 +5,7 @@
     > :first-child {
       width: 100%;
       margin-bottom: -0.5rem;
+      min-height: 2rem;
 
       > :last-child {
         display: flex;
